--- a/ejemplo/templates/ejemplo/familiar_list.html
+++ b/ejemplo/templates/ejemplo/familiar_list.html
@@ -7,14 +7,16 @@
     <title>Document</title>
 </head>
 <body>
-<ul>
+    <ul>
 
-{% block buscar %} {% endblock %}
+        {% block buscar %} {% endblock %}
 
-{% for familiar in object_list %}
-    <li>{{familiar}}</li>
-{% endfor %}    
-</ul>
+        {% for familiar in object_list %}
+            <li>{{familiar}}
+                <a href="{% url 'familiar-borrar' familiar.id %}">Borrar</a>
+            </li>
+        {% endfor %}    
+    </ul>
 
 </body>
 </html>
