--- a/panel_familia/templates/ejemplo/familiar_list.html
+++ b/panel_familia/templates/ejemplo/familiar_list.html
@@ -14,6 +14,7 @@
         {% for familiar in object_list %}
             <li>{{familiar}}
                 <a href="{% url 'familiar-borrar' familiar.id %}">Borrar</a>
+                <a href="{% url 'familiar-actualizar' familiar.id %}">Actualizar</a>
             </li>
         {% endfor %}    
     </ul>
